# ProjectAURORA

./: .gitignore  Cargo.toml  README.md
aurora_kernel/: Cargo.toml
aurora_kernel/src/: lib.rs  main.rs
aurora_kernel/src/command_bus/: mod.rs
aurora_kernel/src/endpoints/: mod.rs
aurora_kernel/src/gpu_scheduler/: mod.rs
aurora_kernel/src/image_gen/: attention.rs  clip.rs  latent_diffusion.rs  lora.rs  mod.rs  scheduler.rs  unet.rs  vae.rs
aurora_kernel/src/kernel/: mod.rs
aurora_kernel/src/memory/: mod.rs
aurora_kernel/src/model_loader/: mod.rs
aurora_kernel/src/plugins/: mod.rs
aurora_kernel/src/safety/: mod.rs
aurora_kernel/src/shared_memory/: mod.rs
aurora_ui/: index.html  package-lock.json  package.json
aurora_ui/src/: App.vue
aurora_ui/src-tauri/: Cargo.toml  tauri.conf.json
aurora_ui/src-tauri/src/: main.rs
avatar_renderer/: CMakeLists.txt
avatar_renderer/include/: avatar.h  emotions.h  ffi_bridge.h  lip_sync.h  renderer.h  rigging.h  shaders.h
avatar_renderer/shaders/: hologram.frag
avatar_renderer/src/: avatar.cpp  emotions.cpp  ffi_bridge.cpp  lip_sync.cpp  renderer.cpp  rigging.cpp  shaders.cpp
deploy/: installer.nsi
docs/: architecture.md  build_instructions.md
models/: config.json
scripts/: build.sh  run.sh
