[package]
name = "aurora_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
burn = { workspace = true }
tch = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
tokio-tungstenite = "0.21"
futures = "0.3"
libc = "0.2"
libloading = "0.8"
uuid = { version = "1.0", features = ["v4"] }
