[package]
name = "aurora_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
burn = { workspace = true, features = ["wgpu"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.21"
futures = "0.3"
libc = "0.2"
libloading = "0.8"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
tch = ["burn/tch"]
